--- a/index.css
+++ b/index.css
@@ -1,3 +1,104 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	/*border: 0;*/
+	/*font-size: 100%;*/
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+*{
+  box-sizing: border-box;
+  max-width: 100%;
+}
+html{
+  font-size: 62.5%;
+}
 body{
-  background-color: hotpink;
+  background-color: white;
+  font-size:1.6rem ;
+  color: #4F4F4F;
+}
+.boxone nav a{
+  margin: 0 10px;
+  padding: 20px;
+  display: inline-block;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+
+}
+.plan{
+  display: inline-block;
+  border: 1px solid lightgray;
+  border-radius: 20px;
+  background-color: #FF764E;
+
+}
+.learn{
+  display: inline-block;
+  border: 1px solid lightgray;
+  border-radius: 20px;
+  background-color: #5ED3EB;
+
+}
+.get{
+  display: inline-block;
+  border: 1px solid lightgray;
+  border-radius: 20px;
+  background-color: #FFCD69;
+}
+
+.boxtwo{
+  display: inline-block;
+}
+ .image {
+   width: 25%;
+   border: 1px solid white;
+   border-radius: 50%;
+   display: inline-block;
+
+ }
+.yose{
+  display: inline-block;
 }
